<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".AboutRenaissanceActivity" >
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
        android:id="@+id/about_renaissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:text="@string/about_renaissance_string" />
        
        <Button 
            android:id="@+id/rssReaderButton"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_renaissance"
            android:onClick="gotoRSSReader"
            android:text="@string/gotoRSSReaderButton"
            android:textAlignment="center"/>
    
    <TextView 
        android:id="@+id/trailer_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rssReaderButton"
        android:layout_marginTop="7sp"
        android:textColor="#ffffff"
        android:text="@string/trailer_vid_string"/>
    <ImageButton 
        android:id="@+id/random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/trailer_vid"
        android:layout_centerHorizontal="true"
        android:onClick="openVideo"
        android:src="@drawable/renaissancetrailervidlinkimage"/>
    
    <TextView 
        android:id="@+id/progection_trailer_vid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/random"
        android:layout_marginTop="7sp"
        android:textColor="#ffffff"
        android:text="@string/progection_teaser_vid_string"/>
    <ImageButton 
        android:id="@+id/progection_trailer_snapshot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progection_trailer_vid"
        android:layout_centerHorizontal="true"
        android:onClick="openProgectionTrailer"
        android:src="@drawable/progectionteaservidlinkimage"/>
    
    <Button 
            android:id="@+id/report_bug_button"
            android:layout_below="@id/progection_trailer_snapshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToBugReport"
            android:text="Found a bug? Report it to the developer here! Thanks!"/>
        
    </RelativeLayout>

    
    
</ScrollView>